# Schema

./: .gitignore  .gitmodules  README.md  checkpoint.md  start.bat  start.sh
backend/: pyproject.toml
backend/src/: main.py  settings.py
backend/src/api/: __init__.py  auth.py  router.py
backend/src/core/: access_control.py  auth.py  context.py  priviledge.py
backend/src/core/execute/: __init__.py  context.py  dataloader.py  mutation.py  preference.py  query.py
backend/src/db/: append_view.py  clean.py  context.py  filter_view.py  pop_view.py  replace_view.py  select_view.py  setup.py  sql_command.py  sqlite_value.py  table.py  table_registry.py  table_view.py  view.py  viewlike.py
backend/src/shared/: __init__.py  key.py  log.py
backend/src/shared/model/: __init__.py  activity.py  allocation.py  building.py  building_edge.py  building_metadata.py  campus.py  course.py  course_teacher.py  facility.py  person.py  preference.py  room.py  user.py
doc/: database_design.md  entity_diagram.d2  math.md  overview.typ  requirement.md  sql_commands.md  system_design.md  todo.md
doc/asset/: entity_relation_diagram.d2  interaction_flow.d2  software_architecture.d2  solver.d2
frontend/: codegen.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  AuthContext.tsx  auth.ts  index.css  main.tsx
src/: test.py
src/backend/: __init__.py  main.py  requirements.txt  settings.py
tests/: conftest.py  helpers.py  test_admin_tables.py  test_api.py  test_auth.py  test_preferences.py  test_table_access.py
(+90 files in other folders)
